# loom-run

./: .env.example  .gitignore  AGENTS.md  README.md  mcp.servers.example.json  pyproject.toml
.github/: REPOSITORY.md
.github/workflows/: mcp-smoke.yml  publish.yml  tests.yml
docs/: ARCHITECTURE.md  ENV.md  SHOWCASE.md
examples/: chat_agent.py
src/loom_run/: __init__.py  cli.py  config.py  http.py  state.py
src/loom_run/agents/: chat_agent.py  supervisor_agent.py
src/loom_run/coordinator/: llm.py  llm_impl.py  prompts.py  step.py
src/loom_run/supervisor/: delegate.py  llm_impl.py  state.py  step.py
src/loom_run/tools/: build_registry.py  local.py  mcp_stdio.py  presets.py
tests/: conftest.py  mcp.servers.ci.json  test_e2e.py  test_http.py  test_local_tools.py  test_mcp_smoke.py  test_mock_coordinator.py  test_state.py  test_supervisor.py
tests/fixtures/: mock_mcp_server.py
